cc.creativecomputing/log/noname-2011-05-20_10-34-05.txt
[Fri May 20 10:34:05 CEST 2011] [CCLog Line:177:initialize] [INFO] logging to file: log/noname-2011-05-20_10-34-05.txt
[Fri May 20 10:34:05 CEST 2011] [CCApp:display] [SEVERE] com.jogamp.opencl.CLException$CLBuildProgramFailureException: 
CLDevice [id: 16918016 name: GeForce 8600M GT type: GPU profile: FULL_PROFILE] build log:
<program source>:33:14:{33:14-33:17}: error: more than one matching function found in __builtin_overload
         p.w = 1.5 - dot(abs(p.xyz), ones.xyz);
                     ^~~~~~~~~~~~~~~~~~~~~~~~~
<program source>:33:18: note: instantiated from:
         p.w = 1.5 - dot(abs(p.xyz), ones.xyz);
                         ^~~~~~~~~~
/System/Library/Frameworks/OpenCL.framework/Resources/cl_kernel.h:2164:25: note: instantiated from:
 #define abs(X)          __builtin_overload(1, X,    __abs_1i8,     __abs_2i8,     __abs_3i8,     __abs_4i8,     __abs_8i8,     __abs_16i8,      \
                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<program source>:34:13: error: unexpected type name '__float4': expected expression
         float4 s = float4(lessThan(p, float4(0.0)));
                    ^
/System/Library/Frameworks/OpenCL.framework/Resources/cl_kernel.h:172:18: note: instantiated from:
 #define float4                  __float4
                                 ^
<program source>:34:32: error: unexpected type name '__float4': expected expression
         float4 s = float4(lessThan(p, float4(0.0)));
                                       ^
/System/Library/Frameworks/OpenCL.framework/Resources/cl_kernel.h:172:18: note: instantiated from:
 #define float4                  __float4
                                 ^
CLDevice [id: 16909312 name: Intel(R) Core(TM)2 Duo CPU     T8300  @ 2.40GHz type: CPU profile: FULL_PROFILE] build log:
<program source>:33:14:{33:14-33:17}: error: more than one matching function found in __builtin_overload
         p.w = 1.5 - dot(abs(p.xyz), ones.xyz);
                     ^~~~~~~~~~~~~~~~~~~~~~~~~
<program source>:33:18: note: instantiated from:
         p.w = 1.5 - dot(abs(p.xyz), ones.xyz);
                         ^~~~~~~~~~
/System/Library/Frameworks/OpenCL.framework/Resources/cl_kernel.h:2164:25: note: instantiated from:
 #define abs(X)          __builtin_overload(1, X,    __abs_1i8,     __abs_2i8,     __abs_3i8,     __abs_4i8,     __abs_8i8,     __abs_16i8,      \
                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<program source>:34:13: error: unexpected type name '__float4': expected expression
         float4 s = float4(lessThan(p, float4(0.0)));
                    ^
/System/Library/Frameworks/OpenCL.framework/Resources/cl_kernel.h:172:18: note: instantiated from:
 #define float4                  __float4
                                 ^
<program source>:34:32: error: unexpected type name '__float4': expected expression
         float4 s = float4(lessThan(p, float4(0.0)));
                                       ^
/System/Library/Frameworks/OpenCL.framework/Resources/cl_kernel.h:172:18: note: instantiated from:
 #define float4                  __float4
                                 ^ [error: CL_BUILD_PROGRAM_FAILURE]
	at com.jogamp.opencl.CLException.newException(CLException.java:78)
	at com.jogamp.opencl.CLProgram.build(CLProgram.java:381)
	at com.jogamp.opencl.CLProgram.build(CLProgram.java:262)
	at cc.creativecomputing.opencl.demos.CCCLSimplexNoiseDemo.setup(CCCLSimplexNoiseDemo.java:90)
	at cc.creativecomputing.CCApp.display(CCApp.java:562)
	at jogamp.opengl.GLDrawableHelper.display(GLDrawableHelper.java:191)
	at javax.media.opengl.awt.GLCanvas$DisplayAction.run(GLCanvas.java:873)
	at jogamp.opengl.GLDrawableHelper.invokeGL(GLDrawableHelper.java:363)
	at javax.media.opengl.awt.GLCanvas.maybeDoSingleThreadedWorkaround(GLCanvas.java:769)
	at javax.media.opengl.awt.GLCanvas.display(GLCanvas.java:388)
	at javax.media.opengl.awt.GLCanvas.paint(GLCanvas.java:487)
	at sun.awt.RepaintArea.paintComponent(RepaintArea.java:276)
	at sun.awt.RepaintArea.paint(RepaintArea.java:241)
	at apple.awt.ComponentModel.handleEvent(ComponentModel.java:263)
	at java.awt.Component.dispatchEventImpl(Component.java:4790)
	at java.awt.Component.dispatchEvent(Component.java:4544)
	at java.awt.EventQueue.dispatchEvent(EventQueue.java:635)
	at java.awt.EventDispatchThread.pumpOneEventForFilters(EventDispatchThread.java:296)
	at java.awt.EventDispatchThread.pumpEventsForFilter(EventDispatchThread.java:211)
	at java.awt.EventDispatchThread.pumpEventsForHierarchy(EventDispatchThread.java:201)
	at java.awt.EventDispatchThread.pumpEvents(EventDispatchThread.java:196)
	at java.awt.EventDispatchThread.pumpEvents(EventDispatchThread.java:188)
	at java.awt.EventDispatchThread.run(EventDispatchThread.java:122)

